# rs-xml-types

./: .gitignore  CMakeLists.txt  README.md  generate_type_support.sh  pose_publisher.cxx  pose_subscriber.cxx  rs-config.xml
types/: Point.idl  Pose.idl  Quaternion.idl
xmltypes/: Point.xml  Pose.xml  Quaternion.xml
